# py_gem_cli

./: .editorconfig  LICENSE  README.md  __main__.py  config.yaml  gcli_utils.py  gemini_service.py  pyproject.toml  run_chat.py
system_promts/: system_instructions.md
