[project]
name = "py-gem-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "google-genai>=1.57.0",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
]

[project.scripts]
gcli = "run_chat:run_chat"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["run_chat", "gcli_utils", "gemini_service"]
